Add Google Analytics tracking

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
+<head><!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TNSHK3XGVC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TNSHK3XGVC');
+</script>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>이어폰 타이머</title>
